...
import ca.rmen.android.poetassistant.R
import ca.rmen.android.poetassistant.settings.Layout
import ca.rmen.android.poetassistant.main.Tab
import ca.rmen.android.poetassistant.main.common.models.ExternalAppMenuItem

const val FAVORITES_SCREEN_CONTENT_EMPTY_TAG = "FavoritesScreen_Empty"
const val FAVORITES_SCREEN_CONTENT_LIST_TAG = "FavoritesScreen_List"
@Composable
fun FavoritesScreenContent(
    favorites: List<String>,
    layout: Layout,
    externalAppMenuItemsProducer: suspend (String) -> List<ExternalAppMenuItem>,
    onToggleFavorite: (String) -> Unit,
...
